# human-as-tool

./: .eslintignore  .gitignore  .prettierignore  PHASE-1-SUMMARY.md  PHASE-2-SUMMARY.md  PHASE-3-COMPLETE.md  PHASE-3-TESTING-GUIDE.md  PHASE-4-COMPLETE.md  PHASE-4-SUMMARY.md  PHASE-4-TEST-REPORT.md  PHASE-5-COMPLETE.md  PHASE-5-TEST-RESULTS.md  PHASE-6-IMPLEMENTATION-SUMMARY.md  PHASE-7-IMPLEMENTATION-SUMMARY.md  TEST-EXECUTION-REPORT.md  TESTING-SUMMARY.md  phase-4-frontend-channels.plan.md  test-backend-api.ps1
.cursor/plans/: phase-7-backend-channels-ab20f1bb.plan.md  (+1 more)
backend/: .gitignore  DATETIME-UTC-UPDATE.md  DEPENDENCY-UPDATE-VERIFICATION.md  PHASE-6-COMPLETE.md  PHASE-7-COMPLETE.md  README.md  pyproject.toml
backend/baml_src/: chat_agent.baml  clients.baml
backend/src/: config.py  main.py
backend/src/api/: dependencies.py
backend/src/api/routers/: __init__.py  auth.py  chat.py  email.py  gmail.py  slack.py
backend/src/api/websocket/: connection.py  email_handler.py  manager.py
backend/src/models/: base.py  user.py
backend/src/services/: agent_service.py  auth_service.py  channel_orchestrator.py  email_service.py  rate_limiter.py  session_service.py  state_sync.py  validation.py
backend/src/services/channels/: __init__.py  base_channel.py  gmail_channel.py  slack_channel.py  slack_event_handler.py
backend/src/storage/: __init__.py  memory_store.py
backend/tests/: test_channel_orchestrator.py  test_session_service.py  test_state_sync.py  test_validation.py
frontend/: README-PHASE1.md  package-lock.json  package.json  tailwind.config.js
(+58 files in other folders)
