[tool.poetry]
name = "human-as-tool-backend"
version = "0.1.0"
description = "Interactive Agent Chat System Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.12.0"
pydantic-settings = "^2.8.0"
python-dotenv = "^1.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
websockets = "^15.0.1"
baml-py = "^0.211.2"
email-validator = "^2.3.0"
bcrypt = "<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

